# schrabble

./: README.md  schrabble.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Word128.hs
test/: Spec.hs
