name:                schrabble
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/schrabble#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Word128
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-quickcheck
                     , aeson
                     , lens
                     , bytestring
                     , word8
                     , containers
                     , vector
                     , text
  default-language:    Haskell2010

executable schrabble-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , schrabble
  default-language:    Haskell2010

test-suite schrabble-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , schrabble
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , QuickCheck
                     , hspec
                     , aeson
                     , bytestring
                     , word8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/schrabble
