name:                schrabble
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/schrabble#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Word128
                     , Data.Text.Arbitrary
                     , Test.QuickCheck.Utf8
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , QuickCheck
                     , binary
                     , bytestring
                     , containers
                     , generic-random
                     , lens
                     , tasty
                     , tasty-quickcheck
                     , text
                     , vector
                     , word8
  default-language:    Haskell2010

executable schrabble-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , schrabble
  default-language:    Haskell2010

test-suite schrabble-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , aeson
                     , bytestring
                     , hspec
                     , lens
                     , schrabble
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , word8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/schrabble
